# hcfl

./: .gitignore  README.md  pyproject.toml
hcfl/: central_aggr_server_app.py  client_app.py  edge_aggr_client_app.py  edge_aggr_server_app.py  edge_worker_client_app.py  server_app.py  task.py
